--- a/package.json
+++ b/package.json
@@ -37,12 +37,14 @@
     "file-saver": "^2.0.5",
     "lucide-react": "^0.474.0",
     "next": "15.1.6",
+    "pdfreader": "^3.0.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "use-debounce": "^10.0.4",
+    "xlsx": "^0.18.5",
     "zod": "^3.24.1"
   },
   "devDependencies": {
